* 2013-06-13 - stefan.preuss@open-xchange.com

  - Fixed bug #27079 : TinyMCE background color-picker shows the same color two times

* 2013-05-16 - marcus.klein@open-xchange.com

 - Fixed bug #26276: Added dependencies including versions to upgrade packages in the correct order after moving files between packages.

* 2013-04-12 - stefan.preuss@open-xchange.com

  - Fixed bug #25878 : Dev: Unable to move position of inline links initially set with prio 'lo'
  - Fixed bug #25879 : Closing the folder move dialog before the tree has been completely loaded throws an JS error

* 2013-04-10 - viktor.pracht@open-xchange.com

 - Fixed bug 25813: Updating does not update themes

* 2013-04-04 - viktor.pracht@open-xchange.com

 - Fixed bug 24814: Significant performance decrease compared to 7.0.0
 - Fixed bug 25698: unable to login with latest build on SLES11

* 2013-04-02 - alexander.quast@open-xchange.com

 - Fixed bug 25622: Hard to properly select a recipient at mail

* 2013-03-25 - viktor.pracht@open-xchange.com

 - Fixed bug 24955: Missing translation/fallback for online help

* 2013-03-22 - viktor.pracht@open-xchange.com

 - Fixed bug 25090: revision shown wrong for app suite ui on sles11

* 2013-03-15 - viktor.pracht@open-xchange.com

 - Implemented story 44467673: Implement Japanese letters in the contact VGrid.

* 2013-03-12 - viktor.pracht@open-xchange.com

 - Implemented story 44469315: Ensure that all contact and user searches also search furigana fields.

* 2013-03-12 - stefan.preuss@open-xchange.com

  - Fixed bug 25287 : Custom favicon.ico stored in a theme doesn't work in FF

* 2013-03-11 - viktor.pracht@open-xchange.com

 - Implemented story 44467519: Implement locale-dependent order of address fields.

* 2013-03-08 - viktor.pracht@open-xchange.com

 - Implemented story 44467347: Implement Japanese furigana fields in contacts.

* 2013-02-19 - viktor.pracht@open-xchange.com
