@@ -8,14 +8,25 @@ ifneq (,$(or $(filter noopt,$(DEB_BUILD_OPTIONS)),\
 	FLAGS += debug=1
 endif
 
-PKGNAME := open-xchange-appsuite-help
+# Which distribution is this?
+DIST_CODE = $(shell lsb_release -sc)
+
+ifeq "$(DIST_CODE)" "wheezy"
+    HTDOC := /var/www/
+else ifeq "$(DIST_CODE)" "jessie"
+    HTDOC := /var/www/html/
+else
+    $(error Not supported Debian version.)
+endif
+
+PKGNAME := $(strip $(shell egrep '^Source: ' debian/control | cut -f 2 -d ':'))
 ROOT := $(CURDIR)/debian/$(PKGNAME)
 
 override_dh_auto_install:
-	ant -Dbasedir=build -DdestDir=$(ROOT)-common -DpackageName=$(PKGNAME) -Dlanguages=false -DkeepCache=true -f build/build.xml build
+	ant -Dbasedir=build -DdestDir=$(ROOT)-common -DpackageName=$(PKGNAME) -Dhtdoc=$(HTDOC) -Dlanguages=false -DkeepCache=true -f build/build.xml build
 	for LANG in de_DE en_GB en_US es_ES es_MX fr_FR it_IT ja_JP nl_NL pl_PL zh_CN zh_TW; do \
 		PACKAGE_EXTENSION=$$(echo $${LANG} | tr '[:upper:]_' '[:lower:]-'); \
-		ant -Dbasedir=build -DdestDir=$(ROOT)-$${PACKAGE_EXTENSION} -DpackageName=$(PKGNAME) -DinstallTarget=$${LANG} -DkeepCache=true -Dnoclean=true -f build/build.xml build; \
+		ant -Dbasedir=build -DdestDir=$(ROOT)-$${PACKAGE_EXTENSION} -DpackageName=$(PKGNAME) -Dhtdoc=$(HTDOC) -DinstallTarget=$${LANG} -DkeepCache=true -Dnoclean=true -f build/build.xml build; \
 	done
 
 override_dh_auto_clean:
