@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spamexperts</name>
+	<name>open-xchange-appsuite-spamexperts</name>
 	<comment></comment>
 	<projects>
 	</projects>
