@@ -1,1 +1,0 @@
-/var/www/appsuite/apps/themes/.htaccess
